--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 /* font-family: 'Roboto', sans-serif; */
+/* Reset & utilities css */
 *{
     margin: 0;
     padding: 0;
+    font-size: 16px;
+    font-weight: 500;
+    color: #000;
     box-sizing: border-box;
 }
 :focus{
@@ -9,7 +13,86 @@
 }
 body{
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
     background: #f3f1ff;
+}
+img{
+    width: 100%;
+}
+hr {
+    border-top: 1px solid #d1d1d1;
+    margin-top: 30px;
+    background: #d1d1d1;
+}
+.content_center{
+    display: flex;
+    justify-content: center;
+}
+/* bg color */
+.bg-white{
+    background: #fff;
+}
+/* Top player start */
+.top_playerBlog_content {
+    width: 870px;
+    /* height: 680px; */
+    padding: 33px 30px 42px 30px;
+    border-radius: 5px;
+}
+.top-player h2,
+.top-blog h2 {
+    text-transform: capitalize;
+    font-size: 24px;
+    font-weight: 500;
+    color: #562eff;
+    margin-bottom: 40px;
+}
+.player {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+}
+.player-member{
+    display: flex;
+    align-items: center;
+}
+.player-img img{
+    width: 56px;
+    height: 56px;
+}
+.player-text .player-name {
+    text-transform: capitalize;
+    font-size: 18px;
+    font-weight: 500;
+    color: #000;
+    margin-left: 16px;
+}
+/* Top Blog Start  */
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 30px;
+}
+.blog {
+    display: flex;
+    align-items: center;
+}
+.blogThumbnail-img {
+    width: 177px;
+    height: 117px;
+}
+.blogContent-info {
+    margin-left: 16px;
+}
+.blog-title {
+    font-size: 20px;
+    line-height: 34px;
+    margin-bottom: 6px;
+}
+.blog-author {
+    font-weight: 400;
+    color: #9f9f9f;
+}
+.blog-author a {
+    text-decoration: none;
+    color: #562eff;
 }
