--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* font-family: 'Roboto', sans-serif; */
 /* Reset & utilities css */
 *{
     margin: 0;
@@ -18,12 +17,13 @@ body{
 img{
     width: 100%;
 }
-hr {
+hr{
     border-top: 1px solid #d1d1d1;
     margin-top: 30px;
+    margin-bottom: 20px;
     background: #d1d1d1;
 }
-.content_center{
+.content_center {
     display: flex;
     justify-content: center;
 }
@@ -32,14 +32,16 @@ hr {
     background: #fff;
 }
 /* Top player start */
-.top_playerBlog_content {
+.top_playerBlog_content,
+.latestCourses_content {
     width: 870px;
-    /* height: 680px; */
     padding: 33px 30px 42px 30px;
     border-radius: 5px;
+    margin-top: 21px;
 }
 .top-player h2,
-.top-blog h2 {
+.top-blog h2,
+.latestCourses_content h2 {
     text-transform: capitalize;
     font-size: 24px;
     font-weight: 500;
@@ -70,7 +72,7 @@ hr {
 .blogs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 30px;
+    grid-row-gap: 26px;
 }
 .blog {
     display: flex;
@@ -87,6 +89,7 @@ hr {
     font-size: 20px;
     line-height: 34px;
     margin-bottom: 6px;
+    text-transform: capitalize;
 }
 .blog-author {
     font-weight: 400;
@@ -95,4 +98,71 @@ hr {
 .blog-author a {
     text-decoration: none;
     color: #562eff;
+}
+/* latest course start */
+.latestCourses_content h2{
+    margin-bottom: 15px;
+}
+.courses {
+    display: flex;
+    justify-content: space-between;
+}
+.course {
+    width: 252px;
+    background: #fff;
+    filter: drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05));
+    padding: 15px 16px 15px 12px;
+    border-radius: 10px;
+}
+.course-banner{
+    width: 224px;
+    height: 104px;
+    margin-bottom: 30px;
+}
+.course-title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    color: #1e1e1e;
+}
+.course-author {
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #ed6b4f;
+    margin: 7px 0 10px 0;
+}
+.course-ratting {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.course-review span {
+    margin-left: 5px;
+    color: #a2a2a2;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.iconFilled{
+    color: #ffc014;
+}
+.fa-star.iconEmpty{
+    color: #aeaeae;
+}
+.course-duration {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    color: #FF4A60;
+    background: rgba(237, 107, 79,.4);
+    padding: 5px;
+    display: inline-block;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+}
+.course-duration .fa-clock{
+    color: #FF4A60;
 }
